Select folder dialog and store previous repos

--- a/kukareker/Cargo.toml
+++ b/kukareker/Cargo.toml
@@ -11,6 +11,7 @@ name = "kukareker"
 crate-type = ["rlib", "staticlib"]
 
 [dependencies]
+rfd = { workspace = true }
 serde = { workspace = true }
 
 test-engine = { workspace = true }
