--- a/kukareker/Cargo.toml
+++ b/kukareker/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["rlib", "staticlib"]
 
 [dependencies]
 rfd = { workspace = true }
+git2 = { workspace = true }
 
 test-engine = { workspace = true }
 
