History view first implementation

--- a/kukareker/Cargo.toml
+++ b/kukareker/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["rlib", "staticlib"]
 [dependencies]
 rfd = { workspace = true }
 git2 = { workspace = true }
+anyhow = { workspace = true }
 
 test-engine = { workspace = true }
 
