--- a/kukareker/Cargo.toml
+++ b/kukareker/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kukareker"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [[bin]]
 name = "kukareker"
@@ -12,8 +12,10 @@ crate-type = ["rlib", "staticlib"]
 
 [dependencies]
 rfd = { workspace = true }
-git2 = { workspace = true }
+git = { workspace = true }
 anyhow = { workspace = true }
+
+rtools = { workspace = true }
 
 test-engine = { workspace = true }
 
