--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ git = { path = "git" }
 
 test-engine = { git = "https://github.com/vlasdasz/test-engine.git", rev = "86a29ff0a6bfbe9e8492e146cd5d2b4f0e9802d4" }
 #test-engine = { path = "../test-engine/test-engine" }
+
+[patch.crates-io]
+git2 = { path = "../forks/git2-rs" }
